feat: Improve environment variable handling and UI
This commit refactors the way environment variables are accessed, making it more robust across different deployment environments (Node, Vite, Vercel). It also introduces minor UI improvements to the authentication page, including a success message and better error handling. Additionally, print styles are removed from the main CSS, and the Gemini API service now checks for a valid API key before attempting to connect.

--- a/index.html
+++ b/index.html
@@ -15,6 +15,8 @@
             background: #f8fafc;
             color: #0f172a;
             overflow-x: hidden;
+            margin: 0;
+            padding: 0;
         }
         .mesh-gradient {
             position: fixed;
@@ -43,7 +45,6 @@
             background: #94a3b8;
         }
 
-        /* Print optimization styles */
         @media print {
             header, footer, button, .no-print, nav, .mesh-gradient {
                 display: none !important;
@@ -102,5 +103,6 @@
 <body>
     <div class="mesh-gradient"></div>
     <div id="root"></div>
+    <script type="module" src="index.tsx"></script>
 </body>
 </html>
